Added functionality to Task service to restrict access to tasks based on the teams assigned to the current user.  This is fairly heavy handed at the moment and has to do multiple calls out to the teams service so does need some tidying up to improve efficancy.

--- a/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBarTask/Default.cshtml
+++ b/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBarTask/Default.cshtml
@@ -12,7 +12,7 @@
                 <a asp-page="/TaskGroup/TaskGroups">@Html.GetTitle(Model, 10112)</a>
             </li>
             <li>
-                <a asp-page="/TaskGroup/CreateOrEdit">@Html.GetTitle(Model, 10113)</a>
+                <a asp-page="/TaskGroup/CreateOrEdit" asp-route-Id="" asp-route-parentId="">@Html.GetTitle(Model, 10113)</a>
             </li>
         </ul>
     </div>
