All URLs and secrets moved to appsettings.  Use of API gateway now configurable via appsettings.  Use of http or https methods for api and client calls now configurable via appsettings

--- a/src/Web Apps/PanacheSoftware.Identity/Pages/Index.cshtml
+++ b/src/Web Apps/PanacheSoftware.Identity/Pages/Index.cshtml
@@ -29,7 +29,7 @@
                         <br />
                         <div class="d-flex justify-content-around">
                             <div class="form-check">
-                                Click <a href="https://localhost:44380/">here</a> to login application.
+                                Click <a href="@Model.clientURL">here</a> to login application.
                             </div>
                         </div>
 
