XML Documentation temporarily disabled due to issue in published docker images, this will remove the swagger UI documentation for the moment.
UI Core static files moved to wwwroot folder and Identity and UI client pages adjusted to read files from correct location.

Docker publishing completed.

--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLOrgChartJS.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLOrgChartJS.cshtml
@@ -1,1 +1,1 @@
-﻿<script src="~/js/orgchart/jquery.orgchart.min.js"></script>
+﻿<script src="~/_content/PanacheSoftware.UI.Core/js/orgchart/jquery.orgchart.min.js"></script>
