--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Index.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Index.cshtml
@@ -8,7 +8,7 @@
 @section Styles {
     @await Html.PartialAsync("_PLFormCSS")
     @await Html.PartialAsync("_PLDataTableCSS")
-    <link rel="stylesheet" href="~/css/dhtmlx-gantt/dhtmlxgantt.css">
+    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/dhtmlx-gantt/dhtmlxgantt.css">
 }
 
 <div id="overlay" class="overlay"></div>
