--- a/src/Web/PanacheSoftware.UI.Core/Pages/Shared/_LoginLayout.cshtml
+++ b/src/Web/PanacheSoftware.UI.Core/Pages/Shared/_LoginLayout.cshtml
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panache Legal Login</title>
-    <link rel="stylesheet" href="~/css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="~/css/fontawesome/all.css">
-    <link rel="stylesheet" href="~/css/panache/pl-login.css">
+    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/fontawesome/all.css">
+    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/panache/pl-login.css">
     <style>
     </style>
 </head>
 <body>
     @RenderBody()
 
-    <script src="~/js/jquery.js"></script>
-    <script src="~/js/popper.min.js"></script>
-    <script src="~/js/bootstrap.js"></script>
+    <script src="~/_content/PanacheSoftware.UI.Core/js/jquery.js"></script>
+    <script src="~/_content/PanacheSoftware.UI.Core/js/popper.min.js"></script>
+    <script src="~/_content/PanacheSoftware.UI.Core/js/bootstrap.js"></script>
 </body>
 </html>
