--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLDataTableJS.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLDataTableJS.cshtml
@@ -1,5 +1,5 @@
-﻿<script src="~/js/datatables/jquery.dataTables.min.js"></script>
-<script src="~/js/datatables/dataTables.bootstrap4.min.js"></script>
-<script src="~/js/datatables/responsive.bootstrap4.min.js"></script>
-<script src="~/js/datatables/dataTables.responsive.min.js"></script>
-<script src="~/js/panache/pl-datatable.js"></script>
+﻿<script src="~/_content/PanacheSoftware.UI.Core/js/datatables/jquery.dataTables.min.js"></script>
+<script src="~/_content/PanacheSoftware.UI.Core/js/datatables/dataTables.bootstrap4.min.js"></script>
+<script src="~/_content/PanacheSoftware.UI.Core/js/datatables/responsive.bootstrap4.min.js"></script>
+<script src="~/_content/PanacheSoftware.UI.Core/js/datatables/dataTables.responsive.min.js"></script>
+<script src="~/_content/PanacheSoftware.UI.Core/js/panache/pl-datatable.js"></script>
