corrected some missed changes of file locations after moving embedded files  in razor class library to wwwroot.

--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Index.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Index.cshtml
@@ -195,7 +195,7 @@
     @await Html.PartialAsync("_PLFormJS")
     @await Html.PartialAsync("_PLDataTableJS")
     @await Html.PartialAsync("_ValidationScriptsPartial")
-    <script src="~/js/dhtmlx-gantt/dhtmlxgantt.js"></script>
+    <script src="~/_content/PanacheSoftware.UI.Core/js/dhtmlx-gantt/dhtmlxgantt.js"></script>
     <script>
 		gantt.config.date_format = "%Y-%m-%d %H:%i";
 		gantt.config.readonly = true;
