Update dependencies based on dependabot notifications.  Move to IdentityServer4 4.0 included project breaking changes so these have been updated.
UI.Core class library static files move to route ui-core.

--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLDataTableCSS.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLDataTableCSS.cshtml
@@ -1,2 +1,2 @@
-﻿<link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/datatables/responsive.bootstrap4.min.css">
-<link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/datatables/dataTables.bootstrap4.min.css">
+﻿<link rel="stylesheet" href="~/ui-core/css/datatables/responsive.bootstrap4.min.css">
+<link rel="stylesheet" href="~/ui-core/css/datatables/dataTables.bootstrap4.min.css">
