--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLFormCSS.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLFormCSS.cshtml
@@ -1,2 +1,2 @@
-﻿<link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/datepicker/bootstrap-datepicker3.css">
-<link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/panache/pl-form.css">
+﻿<link rel="stylesheet" href="~/ui-core/css/datepicker/bootstrap-datepicker3.css">
+<link rel="stylesheet" href="~/ui-core/css/panache/pl-form.css">
