--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLFormJS.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLFormJS.cshtml
@@ -1,2 +1,2 @@
-﻿<script src="~/_content/PanacheSoftware.UI.Core/js/datepicker/bootstrap-datepicker.js"></script>
-<script src="~/_content/PanacheSoftware.UI.Core/js/panache/pl-forms.js"></script> 
+﻿<script src="~/ui-core/js/datepicker/bootstrap-datepicker.js"></script>
+<script src="~/ui-core/js/panache/pl-forms.js"></script> 
