--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLOrgChartCSS.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLOrgChartCSS.cshtml
@@ -1,2 +1,2 @@
-﻿<link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/orgchart/jquery.orgchart.min.css">
-<link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/panache/pl-orgchart.css">
+﻿<link rel="stylesheet" href="~/ui-core/css/orgchart/jquery.orgchart.min.css">
+<link rel="stylesheet" href="~/ui-core/css/panache/pl-orgchart.css">
