--- a/src/Web/PanacheSoftware.UI.Core/Pages/Shared/_PSMainLayout.cshtml
+++ b/src/Web/PanacheSoftware.UI.Core/Pages/Shared/_PSMainLayout.cshtml
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/sidebar/jquery.mCustomScrollbar.css">
-    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/fontawesome/all.css">
-    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/sidebar/sidebar-main.css">
-    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/sidebar/sidebar-themes.css">
+    <link rel="stylesheet" href="~/ui-core/css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="~/ui-core/css/sidebar/jquery.mCustomScrollbar.css">
+    <link rel="stylesheet" href="~/ui-core/css/fontawesome/all.css">
+    <link rel="stylesheet" href="~/ui-core/css/sidebar/sidebar-main.css">
+    <link rel="stylesheet" href="~/ui-core/css/sidebar/sidebar-themes.css">
     
     <!-- Panache Specific-->
-    <link rel="stylesheet" href="~/_content/PanacheSoftware.UI.Core/css/panache/pl-breadcrumb.css">
+    <link rel="stylesheet" href="~/ui-core/css/panache/pl-breadcrumb.css">
     @RenderSection("Styles", required: false)
 
 </head>
@@ -27,11 +27,11 @@
     </div>
     <!-- page-wrapper -->
 
-    <script src="~/_content/PanacheSoftware.UI.Core/js/jquery.js"></script>
-    <script src="~/_content/PanacheSoftware.UI.Core/js/popper.min.js"></script>
-    <script src="~/_content/PanacheSoftware.UI.Core/js/bootstrap.js"></script>
-    <script src="~/_content/PanacheSoftware.UI.Core/js/sidebar/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="~/_content/PanacheSoftware.UI.Core/js/sidebar/sidebar-main.js"></script>
+    <script src="~/ui-core/js/jquery.js"></script>
+    <script src="~/ui-core/js/popper.min.js"></script>
+    <script src="~/ui-core/js/bootstrap.js"></script>
+    <script src="~/ui-core/js/sidebar/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="~/ui-core/js/sidebar/sidebar-main.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
