--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLOrgChartJS.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/_PLOrgChartJS.cshtml
@@ -1,1 +1,1 @@
-﻿<script src="~/_content/PanacheSoftware.UI.Core/js/orgchart/jquery.orgchart.min.js"></script>
+﻿<script src="~/ui-core/js/orgchart/jquery.orgchart.min.js"></script>
