Updated UI Core so that only a single call is made to get all titles for view components.
Moved all projects to .NET 5 from .NET Core 3.1.  This uses all current release .NET 5 packages apart from MySQL integration where Pomelo package is currently a preview version.

--- a/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBar/Default.cshtml
+++ b/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBar/Default.cshtml
@@ -8,13 +8,13 @@
             <a href="#">@Html.GetTitle(Model, 10000)</a>
         </div>
         <!-- sidebar-header  -->
-        @await Component.InvokeAsync("SideBarUserProfile")
+        @await Component.InvokeAsync("SideBarUserProfile", Model)
         <!-- sidebar-search  -->
-        @await Component.InvokeAsync("SideBarSearch")
+        @await Component.InvokeAsync("SideBarSearch", Model)
         <!-- sidebar-menu  -->
-        @await Component.InvokeAsync("SideBarMenu")
+        @await Component.InvokeAsync("SideBarMenu", Model)
         <!-- sidebar-menu  -->
     </div>
     <!-- sidebar-footer  -->
-    @await Component.InvokeAsync("SideBarFooter")
+    @await Component.InvokeAsync("SideBarFooter", Model)
 </nav>
