--- a/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBarFooter/Default.cshtml
+++ b/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBarFooter/Default.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="sidebar-footer">
+﻿@using PanacheSoftware.Core.Domain.API.Language
+@model LangQueryList
+
+<div class="sidebar-footer">
     <div>
         <a id="pin-sidebar" href="#">
             <i class="fa fa-exchange-alt"></i>
@@ -7,7 +10,7 @@
     <div class="dropdown">
         <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-bell"></i>
-            <span class="badge badge-pill badge-warning notification">3</span>
+            @*<span class="badge badge-pill badge-warning notification">3</span>*@
         </a>
         <div class="dropdown-menu notifications" aria-labelledby="dropdownMenuMessage">
             <div class="notifications-header">
@@ -15,54 +18,54 @@
                 Notifications
             </div>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">
-                <div class="notification-content">
-                    <div class="icon">
-                        <i class="fas fa-check text-success border border-success"></i>
-                    </div>
-                    <div class="content">
-                        <div class="notification-detail">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. In totam explicabo
+            @*<a class="dropdown-item" href="#">
+                    <div class="notification-content">
+                        <div class="icon">
+                            <i class="fas fa-check text-success border border-success"></i>
                         </div>
-                        <div class="notification-time">
-                            6 minutes ago
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a class="dropdown-item" href="#">
-                <div class="notification-content">
-                    <div class="icon">
-                        <i class="fas fa-exclamation text-info border border-info"></i>
-                    </div>
-                    <div class="content">
-                        <div class="notification-detail">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. In totam explicabo
-                        </div>
-                        <div class="notification-time">
-                            Today
+                        <div class="content">
+                            <div class="notification-detail">
+                                Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. In totam explicabo
+                            </div>
+                            <div class="notification-time">
+                                6 minutes ago
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-            <a class="dropdown-item" href="#">
-                <div class="notification-content">
-                    <div class="icon">
-                        <i class="fas fa-exclamation-triangle text-warning border border-warning"></i>
-                    </div>
-                    <div class="content">
-                        <div class="notification-detail">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. In totam explicabo
+                </a>
+                <a class="dropdown-item" href="#">
+                    <div class="notification-content">
+                        <div class="icon">
+                            <i class="fas fa-exclamation text-info border border-info"></i>
                         </div>
-                        <div class="notification-time">
-                            Yesterday
+                        <div class="content">
+                            <div class="notification-detail">
+                                Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. In totam explicabo
+                            </div>
+                            <div class="notification-time">
+                                Today
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
+                <a class="dropdown-item" href="#">
+                    <div class="notification-content">
+                        <div class="icon">
+                            <i class="fas fa-exclamation-triangle text-warning border border-warning"></i>
+                        </div>
+                        <div class="content">
+                            <div class="notification-detail">
+                                Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. In totam explicabo
+                            </div>
+                            <div class="notification-time">
+                                Yesterday
+                            </div>
+                        </div>
+                    </div>
+                </a>*@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item text-center" href="#">View all notifications</a>
         </div>
@@ -70,7 +73,7 @@
     <div class="dropdown">
         <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-envelope"></i>
-            <span class="badge badge-pill badge-success notification">7</span>
+            @*<span class="badge badge-pill badge-success notification">7</span>*@
         </a>
         <div class="dropdown-menu messages" aria-labelledby="dropdownMenuMessage">
             <div class="messages-header">
@@ -78,56 +81,56 @@
                 Messages
             </div>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">
-                <div class="message-content">
-                    <div class="pic">
-                        <img src="img/user.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <div class="message-title">
-                            <strong> Jhon doe</strong>
+            @*<a class="dropdown-item" href="#">
+                    <div class="message-content">
+                        <div class="pic">
+                            <img src="img/user.jpg" alt="">
                         </div>
-                        <div class="message-detail">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. In totam explicabo
+                        <div class="content">
+                            <div class="message-title">
+                                <strong> Jhon doe</strong>
+                            </div>
+                            <div class="message-detail">
+                                Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. In totam explicabo
+                            </div>
                         </div>
                     </div>
-                </div>
 
-            </a>
-            <a class="dropdown-item" href="#">
-                <div class="message-content">
-                    <div class="pic">
-                        <img src="img/user.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <div class="message-title">
-                            <strong> Jhon doe</strong>
+                </a>
+                <a class="dropdown-item" href="#">
+                    <div class="message-content">
+                        <div class="pic">
+                            <img src="img/user.jpg" alt="">
                         </div>
-                        <div class="message-detail">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. In totam explicabo
+                        <div class="content">
+                            <div class="message-title">
+                                <strong> Jhon doe</strong>
+                            </div>
+                            <div class="message-detail">
+                                Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. In totam explicabo
+                            </div>
                         </div>
                     </div>
-                </div>
 
-            </a>
-            <a class="dropdown-item" href="#">
-                <div class="message-content">
-                    <div class="pic">
-                        <img src="img/user.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <div class="message-title">
-                            <strong> Jhon doe</strong>
+                </a>
+                <a class="dropdown-item" href="#">
+                    <div class="message-content">
+                        <div class="pic">
+                            <img src="img/user.jpg" alt="">
                         </div>
-                        <div class="message-detail">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. In totam explicabo
+                        <div class="content">
+                            <div class="message-title">
+                                <strong> Jhon doe</strong>
+                            </div>
+                            <div class="message-detail">
+                                Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. In totam explicabo
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>*@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item text-center" href="#">View all messages</a>
 
@@ -136,12 +139,12 @@
     <div class="dropdown">
         <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-cog"></i>
-            <span class="badge-sonar"></span>
+            @*<span class="badge-sonar"></span>*@
         </a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuMessage">
-            <a class="dropdown-item" href="#">My profile</a>
-            <a class="dropdown-item" href="#">Help</a>
-            <a class="dropdown-item" href="#">Setting</a>
+            @*<a class="dropdown-item" href="#">My profile</a>
+                <a class="dropdown-item" href="#">Help</a>*@
+            <a asp-page="/Setting/UserSetting" class="dropdown-item">@Html.GetTitle(Model, 10122)</a>
         </div>
     </div>
     <div>
