--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Index.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Index.cshtml
@@ -47,7 +47,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card border-light mb-6">
-                <div class="card-header">@Model.taskGroupSummary.LongName</div>
+                <div class="card-header">@Model.taskGroupSummary.LongName<a asp-page="/TaskGroup/CreateOrEdit" asp-route-id="@Model.Id" class="btn btn-primary btn-sm float-right"><i class="fa fa-edit"></i></a></div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-12">
