Adjustments to Custom Field Service and introducing UI for creation.

--- a/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBarGeneral/Default.cshtml
+++ b/src/Web/PanacheSoftware.UI.Core/Pages/Shared/Components/SideBarGeneral/Default.cshtml
@@ -8,3 +8,4 @@
 @await Component.InvokeAsync("SideBarClient", Model)
 @await Component.InvokeAsync("SideBarTeam", Model)
 @await Component.InvokeAsync("SideBarTask", Model)
+@await Component.InvokeAsync("SideBarCustomField", Model)
