--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/User/Profile.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/User/Profile.cshtml
@@ -25,7 +25,7 @@
 
     <div class="alert alert-dismissible alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong>@Model.AuthTokenModel.AuthToken</strong>
+        <strong>Bearer @Model.AuthTokenModel.AuthToken</strong>
     </div>
 </div>
 
