--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/CustomFieldGroup/Index.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/CustomFieldGroup/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id?}"
 @model IndexModel
 @{
-    ViewData["Title"] = $"Panache Legal - Custom Field Group ({Model.customFieldGroupModel.customFieldGroupHead.ShortName})";
+    ViewData["Title"] = $"Panache Legal - Custom Field Group ({Model.customFieldGroupHead.ShortName})";
     Layout = "_PSMainLayout";
 }
 
@@ -20,13 +20,13 @@
                     <li class="breadcrumb-item"><a asp-page="/Dashboard/Index">@Html.GetTitle(Model.langQueryList, 10121)</a></li>
                     <li class="breadcrumb-item"><a asp-page="/CustomFieldGroup/CustomFieldGroups">@Html.GetTitle(Model.langQueryList, 10124)</a></li>
                     <li class="breadcrumb-item active">
-                        @if (Model.customFieldGroupModel.customFieldGroupHead.Id == Guid.Empty)
+                        @if (Model.customFieldGroupHead.Id == Guid.Empty)
                         {
                             @Html.Raw("New Custom Field Group")
                         }
                         else
                         {
-                            @Model.customFieldGroupModel.customFieldGroupHead.LongName
+                            @Model.customFieldGroupHead.LongName
                         }
                     </li>
                 </ol>
@@ -46,13 +46,13 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="email">@Html.GetTitle(Model.langQueryList, 11006)</label>
-                                    <input asp-for="customFieldGroupModel.customFieldGroupHead.ShortName" class="form-control" />
-                                    <span asp-validation-for="customFieldGroupModel.customFieldGroupHead.ShortName" class="text-danger"></span>
+                                    <input asp-for="customFieldGroupHead.ShortName" class="form-control" />
+                                    <span asp-validation-for="customFieldGroupHead.ShortName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="fullname">@Html.GetTitle(Model.langQueryList, 11007)</label>
-                                    <input asp-for="customFieldGroupModel.customFieldGroupHead.LongName" class="form-control" />
-                                    <span asp-validation-for="customFieldGroupModel.customFieldGroupHead.LongName" class="text-danger"></span>
+                                    <input asp-for="customFieldGroupHead.LongName" class="form-control" />
+                                    <span asp-validation-for="customFieldGroupHead.LongName" class="text-danger"></span>
                                 </div>
                             </div>
                         </div>
@@ -60,7 +60,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="description">@Html.GetTitle(Model.langQueryList, 10200)</label>
-                                    <textarea asp-for="customFieldGroupModel.customFieldGroupHead.Description" class="form-control" rows="5"></textarea>
+                                    <textarea asp-for="customFieldGroupHead.Description" class="form-control" rows="5"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -68,8 +68,8 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="description">@Html.GetTitle(Model.langQueryList, 10201)</label>
-                                    <select asp-for="customFieldGroupModel.customFieldGroupHead.Status" asp-items="@Model.StatusList" class="custom-select"></select>
-                                    <input asp-for="customFieldGroupModel.customFieldGroupHead.Id" class="form-control" hidden />
+                                    <select asp-for="customFieldGroupHead.Status" asp-items="@Model.StatusList" class="custom-select"></select>
+                                    <input asp-for="customFieldGroupHead.Id" class="form-control" hidden />
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
             <div class="col-md-12">
                 <div class="card border-light mb-6">
                     <div class="card-body">
-                        @if (Model.customFieldGroupModel.customFieldGroupHead.Id == Guid.Empty)
+                        @if (Model.customFieldGroupHead.Id == Guid.Empty)
                         {
                             <button type="submit" class="btn btn-primary">@Html.GetTitle(Model.langQueryList, 11008)</button>
                         }
@@ -123,7 +123,7 @@
                 function addCustomField() {
                     var customfieldTable = $('#customField_table').DataTable()
                     var rowCount = $('#CustomFieldTableCount').val();
-                    var customFieldGroupHeadId = $('#customFieldGroupModel_customFieldGroupHead_Id').val();
+                    var customFieldGroupHeadId = $('#customFieldGroupHead_Id').val();
 
                     customfieldTable.row.add([
                         @{
