--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/CustomFieldGroup/Index.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/CustomFieldGroup/Index.cshtml
@@ -36,7 +36,7 @@
 
     <partial name="_SaveMessage" model="Model.SaveMessageModel" />
 
-    <form method="post">
+    <form id="pageForm" method="post">
         <div class="row">
             <div class="col-md-12">
                 <div class="card border-light mb-6">
@@ -115,6 +115,10 @@
     @await Html.PartialAsync("_ValidationScriptsPartial")
     <script>
             $(document).ready(function () {
+
+                $('#pageForm').submit(function () {
+                    $('select').removeAttr('disabled');
+                });
 
                 var customFieldButton = document.getElementById('add_customField');
 
