--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Task/CreateOrEdit.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/Task/CreateOrEdit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}/{taskGroupId?}"
 @model CreateOrEditModel
 @{
-    ViewData["Title"] = $"Panche Legal - Task ({Model.taskHead.Title})";
+    ViewData["Title"] = $"Panche Legal - Task ({Model.taskItemModel.taskHead.Title})";
     Layout = "_PSMainLayout";
 }
 
@@ -20,13 +20,13 @@
                     <li class="breadcrumb-item"><a asp-page="/Dashboard/Index">@Html.GetTitle(Model.langQueryList, 10121)</a></li>
                     <li class="breadcrumb-item"><a asp-page="/TaskGroup/TaskGroups">@Html.GetTitle(Model.langQueryList, 10111)</a></li>
                     <li class="breadcrumb-item active">
-                        @if (Model.taskHead.Id == Guid.Empty)
+                        @if (Model.taskItemModel.taskHead.Id == Guid.Empty)
                         {
                             @Html.Raw("New Task")
                         }
                         else
                         {
-                            @Model.taskHead.Title
+                            @Model.taskItemModel.taskHead.Title
                         }
                     </li>
                 </ol>
@@ -46,8 +46,8 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label class="bmd-label-floating">@Html.GetTitle(Model.langQueryList, 10900)</label>
-                                    <input asp-for="taskHead.Title" class="form-control" />
-                                    <span asp-validation-for="taskHead.Title" class="text-danger"></span>
+                                    <input asp-for="taskItemModel.taskHead.Title" class="form-control" />
+                                    <span asp-validation-for="taskItemModel.taskHead.Title" class="text-danger"></span>
                                 </div>
                             </div>
                         </div>
@@ -55,7 +55,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label class="bmd-label-floating">@Html.GetTitle(Model.langQueryList, 10200)</label>
-                                    <textarea asp-for="taskHead.Description" class="form-control" rows="5"></textarea>
+                                    <textarea asp-for="taskItemModel.taskHead.Description" class="form-control" rows="5"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -77,17 +77,17 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label class="bmd-label-floating">@Html.GetTitle(Model.langQueryList, 10222)</label>
-                                    <input asp-for="taskHead.StartDate" type="text" class="form-control datepicker" />
-                                    <input asp-for="taskHead.OriginalStartDate" type="text" class="form-control datepicker" hidden />
+                                    <input asp-for="taskItemModel.taskHead.StartDate" type="text" class="form-control datepicker" />
+                                    <input asp-for="taskItemModel.taskHead.OriginalStartDate" type="text" class="form-control datepicker" hidden />
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label class="bmd-label-floating">@Html.GetTitle(Model.langQueryList, 10911)</label>
-                                    <input asp-for="taskHead.CompletionDate" type="text" class="form-control datepicker" />
-                                    <input asp-for="taskHead.Completed" type="checkbox" hidden />
-                                    <input asp-for="taskHead.CompletedOnDate" type="text" class="form-control datepicker" hidden />
-                                    <input asp-for="taskHead.OriginalCompletionDate" type="text" class="form-control datepicker" hidden />
+                                    <input asp-for="taskItemModel.taskHead.CompletionDate" type="text" class="form-control datepicker" />
+                                    <input asp-for="taskItemModel.taskHead.Completed" type="checkbox" hidden />
+                                    <input asp-for="taskItemModel.taskHead.CompletedOnDate" type="text" class="form-control datepicker" hidden />
+                                    <input asp-for="taskItemModel.taskHead.OriginalCompletionDate" type="text" class="form-control datepicker" hidden />
                                 </div>
                             </div>
                         </div>
@@ -109,16 +109,16 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label class="bmd-label-floating">@Html.GetTitle(Model.langQueryList, 10905)</label>
-                                    <select asp-for="taskHead.MainUserId" asp-items="@Model.UserSelectList" class="custom-select"></select>
+                                    <select asp-for="taskItemModel.taskHead.MainUserId" asp-items="@Model.UserSelectList" class="custom-select"></select>
                                     <input class="form-control" hidden type="text" id="unBound" name="unBound" value="Unbound" />
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label class="bmd-label-floating">@Html.GetTitle(Model.langQueryList, 10201)</label>
-                                    <select asp-for="taskHead.Status" asp-items="@Model.StatusList" class="custom-select"></select>
-                                    <input asp-for="taskHead.Id" class="form-control" hidden />
-                                    <input asp-for="taskHead.TaskGroupHeaderId" type="text" class="form-control" hidden />
+                                    <select asp-for="taskItemModel.taskHead.Status" asp-items="@Model.StatusList" class="custom-select"></select>
+                                    <input asp-for="taskItemModel.taskHead.Id" class="form-control" hidden />
+                                    <input asp-for="taskItemModel.taskHead.TaskGroupHeaderId" type="text" class="form-control" hidden />
                                 </div>
                             </div>
                         </div>
@@ -132,12 +132,20 @@
             </div>
         </div>
         <div class="row">
+            <partial name="_CustomFieldGroupLinkTaskItem" model="Model.customFieldGroupLinkTaskItemTableModel" />
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-12">
                 <div class="card border-light mb-6">
                     <div class="card-body">
-                        <input asp-for="taskHead.TaskType" type="text" class="form-control" hidden />
-                        <input asp-for="taskHead.SequenceNumber" type="text" class="form-control" hidden />
-                        @if (Model.taskHead.Id == Guid.Empty)
+                        <input asp-for="taskItemModel.taskHead.TaskType" type="text" class="form-control" hidden />
+                        <input asp-for="taskItemModel.taskHead.SequenceNumber" type="text" class="form-control" hidden />
+                        @if (Model.taskItemModel.taskHead.Id == Guid.Empty)
                         {
                             <button type="submit" class="btn btn-primary">@Html.GetTitle(Model.langQueryList, 10906)</button>
                         }
@@ -156,5 +164,36 @@
     @await Html.PartialAsync("_PLFormJS")
     @await Html.PartialAsync("_PLDataTableJS")
     @await Html.PartialAsync("_ValidationScriptsPartial")
+    <script>
+            $(document).ready(function () {
 
+                $('#pageForm').submit(function () {
+                    $('select').removeAttr('disabled');
+                });
+
+                var customFieldLinkButton = document.getElementById('add_customFieldGroupLink');
+
+                customFieldLinkButton.addEventListener('click', addCustomFieldLink, false);
+
+                function addCustomFieldLink() {
+                    var customfieldLinkTable = $('#customFieldGroupLink_table').DataTable()
+                    var rowCount = $('#CustomFieldGroupLinkTableCount').val();
+                    var taskHeadId = $('#taskItemModel_taskHead_Id').val();
+
+                    customfieldLinkTable.row.add([
+                        @{
+                            for (int i = 0; i < Model.customFieldGroupLinkTaskItemTableModel.customFieldGroupRows.Count(); i++)
+                            {
+                                @Html.Raw(Model.customFieldGroupLinkTaskItemTableModel.customFieldGroupRows[i]);
+                            }
+                        }
+                    ]).draw();
+
+                    $('.datepicker').datepicker();
+
+                    rowCount++;
+                    $('#CustomFieldGroupLinkTableCount').val(rowCount);
+                }
+            });
+    </script>
 }
