CustomFieldGroup Input section will now appear against the main task group.  Further code changes are required to also display this against the child task groups and task items, but this predominantly just requires changes to the models.  This is also the first release that now includes some Blazor functionality.

--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Dashboard/Index.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Dashboard/Index.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewData["Title"] = "Dashboard";
     Layout = "_PSMainLayout";
+
+    var tokens = new InitialApplicationState
+    {
+        AccessToken = await HttpContext.GetTokenAsync("access_token")
+    };
 }
 
 <div id="overlay" class="overlay"></div>
@@ -32,6 +37,17 @@
         </div>
     </div>
 
+    <!--<div class="row">
+        <div class="form-group col-md-6">
+            <div class="card border-primary mb-6">
+                <div class="card-header">Counter</div>
+                <div class="card-body">-->
+                    @*<component type="typeof(Counter)" param-InitialState="tokens" render-mode="ServerPrerendered" />*@
+                    @*<component type="typeof(DashboardCounter)" param-InitialState="tokens" render-mode="ServerPrerendered" />*@
+                <!--</div>
+            </div>
+        </div>
+    </div>-->
 
     @if (Model.taskGroupSummaryList.TaskGroupSummarys.Any())
     {
