--- a/src/Web/PanacheSoftware.UI.Core/Pages/Shared/_PSMainLayout.cshtml
+++ b/src/Web/PanacheSoftware.UI.Core/Pages/Shared/_PSMainLayout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/ui-core/css/fontawesome/all.css">
     <link rel="stylesheet" href="~/ui-core/css/sidebar/sidebar-main.css">
     <link rel="stylesheet" href="~/ui-core/css/sidebar/sidebar-themes.css">
-    
+
     <!-- Panache Specific-->
     <link rel="stylesheet" href="~/ui-core/css/panache/pl-breadcrumb.css">
     @RenderSection("Styles", required: false)
@@ -32,6 +32,7 @@
     <script src="~/ui-core/js/bootstrap.js"></script>
     <script src="~/ui-core/js/sidebar/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="~/ui-core/js/sidebar/sidebar-main.js"></script>
+    <script src="_framework/blazor.server.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
