--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Dashboard/_ViewImports.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Dashboard/_ViewImports.cshtml
@@ -2,5 +2,7 @@
 @using PanacheSoftware.UI.Core.Helpers
 @using PanacheSoftware.UI.Client.Pages.Dashboard
 @using PanacheSoftware.Core.Types
+@using PanacheSoftware.Http
+@using Microsoft.AspNetCore.Authentication
 @namespace PanacheSoftware.UI.Client.Pages.Dashboard
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
