--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/_ViewImports.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/TaskGroup/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using PanacheSoftware.UI.Core.Helpers
 @using PanacheSoftware.UI.Client.Pages.TaskGroup
 @using PanacheSoftware.Core.Types
+@using PanacheSoftware.Core.Domain.UI
 @namespace PanacheSoftware.UI.Client.Pages.TaskGroup
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
